crates/wac-parser/tests/resolution/fail/mismatched-list-element/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (param "l" (list u8))))
  )
)
